[project]
name = "figmint"
version = "0.1.0"
description = "Create fresh figures."
readme = "README.md"
authors = [
    { name = "Pete Bachant", email = "petebachant@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
